Includes refactor of the nav-list + focus spacing fix

--- a/public/assets/sass/_components/_components.header.scss
+++ b/public/assets/sass/_components/_components.header.scss
@@ -85,73 +85,3 @@ header,
     margin-top: 0;
   }
 }
-
-.nav-list {
-  margin-top: 50px;
-  margin-bottom: 51px;
-
-  @include media-query(portable) {
-    margin-top: 25px;
-  }
-
-  @include media-query(phone) {
-    display: none;
-  }
-}
-
-.nav-list__link {
-  padding: 0 13px;
-
-  color: $yom-grey;
-  font-size: 18px;
-  font-weight: 500;
-  text-decoration: none;
-
-  &:hover {
-    color: $yom-black;
-    text-decoration: underline;
-  }
-}
-
-.nav-list__item {
-  &:first-child {
-    .nav-list__link {
-      padding-left: 0;
-    }
-  }
-
-  &:last-child {
-    .nav-list__link {
-      padding-right: 0;
-    }
-  }
-}
-
-.nav-list--phone {
-  @include media-query(phone) {
-    width: 100%;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid $yom-grey;
-
-    background-color: lighten($yom-grey, 25%);
-    text-align: center;
-  }
-}
-
-.nav-list--trigger {
-  display: none;
-
-  @include media-query(phone) {
-    position: absolute;
-    right: 16px;
-
-    display: block;
-    margin-top: 32px;
-
-    color: $yom-black;
-    font-size: 32px;
-  }
-}
